--- a/formAdd.html
+++ b/formAdd.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Marketplace</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./form.css">
 </head>
 <body>
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+
+    </nav>
+    
     
     <form class="m-3">
         <div class="mb-3">
@@ -16,7 +21,7 @@
         </div>
         <div class="mb-3">
             <label for="descriptionInput" class="form-label">Description</label>
-          <input type="text" class="form-control" id="inputDesc" />
+          <input type="text" class="form-control" id="inputDescription" />
         </div>
         <div class="mb-3">
           <label for="brandInput" class="form-label">Brand</label>
