--- a/formAdd.html
+++ b/formAdd.html
@@ -36,7 +36,7 @@
           <input type="number" class="form-control" id="inputPrice" />
         </div>
         <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="check" />
+            <input type="checkbox" class="form-check-input" id="check1" />
             <label class="form-check-label" for="exampleCheck1">Check me out</label>
         </div>
         <button id="submitBtn" type="button" class="disabled btn btn-primary">
