--- a/formPut.html
+++ b/formPut.html
@@ -16,28 +16,28 @@
     
     <form id="put-form">
         <div class="mb-3">
-          <label for="nameInput" class="form-label">Name</label>
+          <label for="inputName" class="form-label">Name</label>
           <input type="text" class="form-control" id="inputName" />
         </div>
         <div class="mb-3">
-            <label for="descriptionInput" class="form-label">Description</label>
+            <label for="inputDescription" class="form-label">Description</label>
           <input type="text" class="form-control" id="inputDescription" />
         </div>
         <div class="mb-3">
-          <label for="brandInput" class="form-label">Brand</label>
+          <label for="inputBrand" class="form-label">Brand</label>
           <input type="text" class="form-control" id="inputBrand" />
         </div>
         <!-- <div class="mb-3">
-            <label for="urlInput" class="form-label">Image Url</label>
+            <label for="InputUrl" class="form-label">Image Url</label>
             <input type="url" class="form-control" id="InputUrl" />
         </div> -->
         <div class="mb-3">
-          <label for="priceInput" class="form-label">Price</label>
+          <label for="inputPrice" class="form-label">Price</label>
           <input type="number" class="form-control" id="inputPrice" />
         </div>
         <div class="mb-3 form-check">
             <input type="checkbox" class="form-check-input" id="check1" />
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            <label class="form-check-label" for="check1">Check me out</label>
         </div>
         <button id="submitBtn" type="button" class="disabled btn btn-primary">
             Submit
