--- a/formPut.html
+++ b/formPut.html
@@ -14,7 +14,7 @@
     </nav>
 
     
-    <form id="put-form">
+    <form id="put-form" class="form">
         <div class="mb-3">
           <label for="inputName" class="form-label">Name</label>
           <input type="text" class="form-control" id="inputName" />
@@ -27,10 +27,6 @@
           <label for="inputBrand" class="form-label">Brand</label>
           <input type="text" class="form-control" id="inputBrand" />
         </div>
-        <!-- <div class="mb-3">
-            <label for="InputUrl" class="form-label">Image Url</label>
-            <input type="url" class="form-control" id="InputUrl" />
-        </div> -->
         <div class="mb-3">
           <label for="inputPrice" class="form-label">Price</label>
           <input type="number" class="form-control" id="inputPrice" />
