--- a/formAdd.html
+++ b/formAdd.html
@@ -14,7 +14,7 @@
     </nav>
     
     
-    <form class="m-3">
+    <form class="m-3 form">
         <div class="mb-3">
           <label for="nameInput" class="form-label">Name</label>
           <input type="text" class="form-control" id="inputName" />
